# cartographer-agent

./: .gitignore  .versionrc.json  CHANGELOG.md  IMPLEMENTATION.md  README.md  commitlint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release-cli.yml  release.yml
.husky/: post-commit  pre-commit
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  Cross.toml  Entitlements.plist  cargo-version-updater.cjs  tauri.conf.json  version-updater.cjs
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  create_icon.sh
src-tauri/installer/: nsis-hooks.nsi
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: cli.rs  commands.rs  main.rs  persistence.rs  scheduler.rs  tray.rs  updater.rs
src-tauri/src/auth/: credentials.rs  device_flow.rs  mod.rs
src-tauri/src/cloud/: client.rs  config.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/scanner/: arp.rs  mod.rs  oui.rs  ping.rs  privileges.rs
src/components/: ConfirmDialog.vue  DeviceHealthPieChart.vue  DeviceList.vue  StatusBar.vue  TitleBar.vue  UpdateDialog.vue  UpdateNotificationBar.vue
src/composables/: usePostHog.ts  useUpdater.ts
src/router/: index.ts
src/stores/: agent.ts
src/views/: Dashboard.vue  Preferences.vue  Setup.vue
