[package]
name = "cartographer-agent"
version = "1.3.2"
description = "Cartographer Agent - Network monitoring desktop application"
authors = ["Cartographer Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
# tauri-plugin-notification = "2.0"  # TODO: Re-enable when notifications are implemented
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
webbrowser = "0.8"
winreg = { version = "0.50", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

